// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Vertical Navigation Condensed 1`] = `
<div
  class="fd-vertical-nav fd-vertical-nav--condensed"
>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-vertical-nav__main-navigation"
  >
    
        
    <ul
      aria-label="Main Menu"
      class="fd-list"
    >
      
            
      <li
        class="fd-list__navigation-item--condensed"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--home"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Overview
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item--condensed"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--calendar"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Calendar
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item--condensed"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--customer"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Customers
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item--condensed"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--shipping-status"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Deliveries
        </span>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Vertical Navigation Default 1`] = `
<div
  class="fd-vertical-nav"
>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-vertical-nav__main-navigation"
  >
    
        
    <ul
      aria-label="Main Menu"
      class="fd-list"
    >
      
            
      <li
        class="fd-list__navigation-item"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--home"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Overview
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--calendar"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Calendar
        </span>
        
                
        <i
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--customer"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Customers
        </span>
        
                
        <i
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item"
      >
        
                
        <i
          class="fd-list__navigation-item-icon sap-icon--shipping-status"
        />
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Deliveries
        </span>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;

exports[`Storyshots Components/Vertical Navigation Navigation Indication 1`] = `
<section>
  <div
    class="fd-vertical-nav"
  >
    
    
    <nav
      aria-label="Main Menu"
      class="fd-vertical-nav__main-navigation"
    >
      
        
      <ul
        aria-label="Main Menu"
        class="fd-list"
      >
        
            
        <li
          class="fd-list__navigation-item"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--home"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Overview
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item is-expanded"
          onclick="toggleVerticalNavSubmenu(event)"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--calendar"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Calendar
          </span>
          
                
          <i
            class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
          />
          
                
          <ul
            class="fd-list"
          >
            
                    
            <li
              class="fd-list__navigation-item fd-list__navigation-item--second fd-list__navigation-item--indicated"
            >
              
                        
              <span
                class="fd-list__navigation-item-text"
              >
                Second level item 1
              </span>
              
                        
              <span
                class="fd-list__navigation-item-indicator"
              />
              
                    
            </li>
            
                    
            <li
              class="fd-list__navigation-item fd-list__navigation-item--second"
            >
              
                        
              <span
                class="fd-list__navigation-item-text"
              >
                Second level item 2
              </span>
              
                    
            </li>
            
                
          </ul>
          
                
          <span
            class="fd-list__navigation-item-indicator"
          />
          
            
        </li>
        
        
      </ul>
      
    
    </nav>
    

  </div>
  

  <br />
  <br />
  

  <div
    class="fd-vertical-nav fd-vertical-nav--condensed"
  >
    
    
    <nav
      aria-label="Main Menu"
      class="fd-vertical-nav__main-navigation"
    >
      
        
      <ul
        aria-label="Main Menu"
        class="fd-list"
      >
        
            
        <li
          class="fd-list__navigation-item--condensed"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--home"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Overview
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item--condensed"
          onclick="toggleCondensedVerticalNavSubmenu(event, 'parent')"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--calendar"
          />
          
                
          <i
            class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow"
          />
              
                
          <span
            class="fd-list__navigation-item-indicator"
          />
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--left fd-popover__body--no-arrow fd-list__navigation-item-popover--first"
            id="popoverA1"
          >
            
                    
            <ul
              class="fd-list"
            >
              
                        
              <li
                class="fd-list__navigation-item--condensed"
                onclick="toggleCondensedVerticalNavSubmenu(event, 'child')"
              >
                
                            
                <i
                  class="fd-list__navigation-item-icon sap-icon--calendar"
                />
                
                            
                <span
                  class="fd-list__navigation-item-text"
                >
                  Calendar
                </span>
                
                        
              </li>
              
                    
            </ul>
            
                
          </div>
          
                
          <div
            aria-hidden="false"
            class="fd-popover__body fd-popover__body--left fd-popover__body--no-arrow fd-list__navigation-item-popover--second"
            id="popoverA1"
          >
            
                    
            <ul
              class="fd-list"
            >
              
                        
              <li
                class="fd-list__navigation-item--condensed fd-list__navigation-item--second fd-list__navigation-item--indicated"
              >
                
                            
                <span
                  class="fd-list__navigation-item-text"
                >
                  Second level item 1
                </span>
                
                            
                <span
                  class="fd-list__navigation-item-indicator"
                />
                
                        
              </li>
              
                        
              <li
                class="fd-list__navigation-item--condensed fd-list__navigation-item--second"
              >
                
                            
                <span
                  class="fd-list__navigation-item-text"
                >
                  Second level item 2
                </span>
                
                        
              </li>
              
                    
            </ul>
            
                
          </div>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item--condensed"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--customer"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Customers
          </span>
          
            
        </li>
        
            
        <li
          class="fd-list__navigation-item--condensed"
        >
          
                
          <i
            class="fd-list__navigation-item-icon sap-icon--shipping-status"
          />
          
                
          <span
            class="fd-list__navigation-item-text"
          >
            Deliveries
          </span>
          
            
        </li>
        
        
      </ul>
      
    
    </nav>
    

  </div>
  

</section>
`;

exports[`Storyshots Components/Vertical Navigation Text Only 1`] = `
<div
  class="fd-vertical-nav"
>
  
    
  <nav
    aria-label="Main Menu"
    class="fd-vertical-nav__main-navigation"
  >
    
        
    <ul
      aria-label="Main Menu"
      class="fd-list"
    >
      
            
      <li
        class="fd-list__navigation-item"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Overview
        </span>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Calendar
        </span>
        
                
        <i
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item is-expanded"
        onclick="toggleVerticalNavSubmenu(event)"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Customers
        </span>
        
                
        <i
          class="fd-list__navigation-item-arrow sap-icon--navigation-down-arrow is-expanded"
        />
        
                
        <ul
          class="fd-list"
        >
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 1
            </span>
            
                    
          </li>
          
                    
          <li
            class="fd-list__navigation-item fd-list__navigation-item--second"
          >
            
                        
            <span
              class="fd-list__navigation-item-text"
            >
              Second level item 2
            </span>
            
                    
          </li>
          
                
        </ul>
        
            
      </li>
      
            
      <li
        class="fd-list__navigation-item"
      >
        
                
        <span
          class="fd-list__navigation-item-text"
        >
          Deliveries
        </span>
        
            
      </li>
      
        
    </ul>
    
    
  </nav>
  

</div>
`;
